# rr

./: README.md  config.example.js  config.js  index.html  pyproject.toml
.claude/: settings.json
src/notebooklm_claude/: __init__.py  server.py  tools.py
